package app;

interface FileConverter {
    String convertToJson(String content);
}
